@@ -95,7 +95,7 @@ public class Test01 implements StorageTest {
             // create temporary storage based on a previously created temporary file
             Object pArgs[] = new Object[2];
             pArgs[0] = sTempFileURL;
-            pArgs[1] = new Integer( ElementModes.WRITE );
+            pArgs[1] = Integer.valueOf( ElementModes.WRITE );
 
             Object oTempFileStorage = m_xStorageFactory.createInstanceWithArguments( pArgs );
             XStorage xTempFileStorage = UnoRuntime.queryInterface( XStorage.class, oTempFileStorage );
@@ -119,7 +119,7 @@ public class Test01 implements StorageTest {
 
 
             // the temporary file must not be locked any more after storage disposing
-            pArgs[1] = new Integer( ElementModes.READWRITE );
+            pArgs[1] = Integer.valueOf( ElementModes.READWRITE );
             Object oResultStorage = m_xStorageFactory.createInstanceWithArguments( pArgs );
             XStorage xResultStorage = UnoRuntime.queryInterface( XStorage.class, oResultStorage );
             if ( xResultStorage == null )
