@@ -115,7 +115,7 @@ public class ODateModel extends GenericModelTest {
      *
      *    NamedValue Date = new NamedValue();
      *    Date.Name = "Date";
-     *    Date.Value = new Integer(DBTools.TST_DATE);
+     *    Date.Value = Integer.valueOf(DBTools.TST_DATE);
      *    super.m_propertiesToSet.add(Date);
      *    super.m_LCShape_Type = "FixedText";
      * </pre>
