@@ -144,7 +144,7 @@ public class SwAccessibleFooterView extends TestCase {
                 public void fireEvent() {
                     try {
                         PropSet.setPropertyValue("FooterLeftMargin",
-                            new Integer(1000));
+                            Integer.valueOf(1000));
                     } catch (com.sun.star.uno.Exception e) {
                         e.printStackTrace();
                         throw new StatusException("Cann't change footer.", e);
